--- a/vue-end/vue-til/src/css/common.css
+++ b/vue-end/vue-til/src/css/common.css
@@ -15,123 +15,221 @@ body {
 
 h1 {
   text-align: center;
-  font-weight: 100;
 }
+  body {
+    background: #F7F6F9;
+  }
 
-/*--- LINK ---*/
-a {
-  color: #364f6b;
-  text-decoration: none;
-}
+  .app {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-size: 1.4rem;
+  }
 
-a:hover {
-  color: #3fc1c9;
-}
+  .app-contents {
+    height: calc(100% - 64px - 102px);
+  }
 
-/*--- LAYOUT ---*/
-.contents {
-  max-width: 1020px;
-  margin: 0 auto;
-  padding: 0 5px;
-  width: 100%;
-}
+  h1 {
+    text-align: center;
+    font-weight: 100;
+  }
 
-/*--- HEADER ---*/
-.page-header {
-  font-size: 45px;
-  font-weight: 600;
-  color: #456155;
-  padding: 30px 5px 15px;
-}
+  /*--- LINK ---*/
+  a {
+    color: #364f6b;
+    text-decoration: none;
+  }
 
-/*--- FORM ---*/
-.form-container {
-  display: flex;
-  align-items: center;
-}
+  a:hover {
+    color: #3fc1c9;
+  }
 
-.form-wrapper {
-  background: white;
-  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
-  border-radius: 3px;
-  padding: 15px 15px;
-}
+  /*--- LAYOUT ---*/
+  .contents {
+    max-width: 1020px;
+    margin: 0 auto;
+    padding: 0 5px;
+    width: 100%;
+  }
 
-.form-wrapper.form-wrapper-sm {
-  max-width: 500px;
-  margin: 40px auto;
-}
+  /*--- HEADER ---*/
+  .page-header {
+    font-size: 45px;
+    font-weight: 600;
+    color: #456155;
+    padding: 30px 5px 15px;
+  }
 
-.form-wrapper-sm .page-header {
-  padding: 0px 0 20px;
-}
+  /*--- FORM ---*/
+  .form-container {
+    display: flex;
+    align-items: center;
+  }
 
-.form {
-  width: 460px;
-  height: 100%;
-}
+  .form-wrapper {
+    background: white;
+    -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+    border-radius: 3px;
+    padding: 15px 15px;
+  }
 
-.form .validation-text {
-  margin-top: -0.5rem;
-  margin-bottom: 0.5rem;
-  font-size: 1rem;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-}
+  .form-wrapper.form-wrapper-sm {
+    max-width: 500px;
+    margin: 40px auto;
+  }
 
-.form label {
-  width: 100%;
-  display: block;
-  margin-bottom: 0.5rem;
-  color: #364f6b;
-  font-size: 90%;
-}
+  .form-wrapper-sm .page-header {
+    padding: 0px 0 20px;
+  }
 
-.form input,
-.form textarea {
-  font-family: inherit;
-  font-size: 100%;
-  width: 100%;
-  border: 1px solid #dae1e7;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
-  padding: 0.5rem 0.75rem;
-  margin-bottom: 1rem;
-}
+  .form {
+    width: 460px;
+    height: 100%;
+  }
 
-.form input.valid {
-  border: 1px solid #21b314;
-}
+  .form .validation-text {
+    margin-top: -0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
 
-.form input.invalid {
-  border: 1px solid red;
-}
+  .form label {
+    width: 100%;
+    display: block;
+    margin-bottom: 0.5rem;
+    color: #364f6b;
+    font-size: 90%;
+  }
 
-.form div:nth-last-child(2) {
-  margin-bottom: 0.5rem;
-}
+  .form input,
+  .form textarea {
+    font-family: inherit;
+    font-size: 100%;
+    width: 100%;
+    border: 1px solid #dae1e7;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+    padding: 0.5rem 0.75rem;
+    margin-bottom: 1rem;
+  }
 
-.btn {
-  background: #FE9616;
-  padding: 0.5rem 1.5rem;
-  font-weight: 700;
-  border-radius: .25rem;
-  border: 0 solid #dae1e7;
-}
+  .form input.valid {
+    border: 1px solid #21b314;
+  }
 
-.btn.disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
+  .form input.invalid {
+    border: 1px solid red;
+  }
 
-.log {
-  color: #ff4057;
-  font-size: 1rem;
-  text-align: center;
-  font-weight: 800;
-}
+  .form div:nth-last-child(2) {
+    margin-bottom: 0.5rem;
+  }
 
-.warning {
-  color: #ff4057;
-}
+  .btn {
+    background: #FE9616;
+    padding: 0.5rem 1.5rem;
+    font-weight: 700;
+    border-radius: .25rem;
+    border: 0 solid #dae1e7;
+  }
+
+  .btn.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+
+  .log {
+    color: #ff4057;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .warning {
+    color: #ff4057;
+  }
+
+  /*--- LIST ---*/
+  .list-container {
+    padding-top: 13px;
+  }
+
+  .list-container.sticky {
+    margin-top: 76px;
+  }
+
+  .list-container>ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .list-container>ul>li {
+    position: relative;
+    flex-grow: 1;
+    width: 320px;
+    height: 250px;
+    margin: 7px;
+    padding: 10px 20px;
+    background: white;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+    border-radius: 3px;
+  }
+
+  .post-title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+  }
+
+  .post-contents {
+    height: 160px;
+    overflow-y: auto;
+    font-size: 18px;
+  }
+
+  .post-time {
+    position: absolute;
+    bottom: 4px;
+    right: 5px;
+    font-size: 14px;
+    color: #9e9e9e;
+  }
+
+  .icon {
+    font-size: 1.3rem;
+    cursor: pointer;
+    color: #364f6b;
+    padding-right: 0.4rem;
+  }
+
+  .icon:hover {
+    color: #3fc1c9;
+  }
+
+  .icon:active {
+    color: #fc5185;
+  }
+
+  .ion-md-create {
+    padding-left: 0.1rem;
+  }
+
+  .create-button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: fixed;
+    right: 20px;
+    bottom: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    background: #fe9616;
+    border: 3px solid white;
+  }
